bk_ida/gccida/g0/find_exception_handler_labels
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_exception_handler_labels/src/except.c:1935:11: error: use of undeclared identifier 'tree_map_base_eq'
( htab_eq)tree_map_base_eq, 
          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_exception_handler_labels/src/obj/except.o] Error 1
